modificaciones en las clases